@@ -4,7 +4,7 @@
   Firefly Luciferin, very fast Java Screen Capture software designed
   for Glow Worm Luciferin firmware.
 
-  Copyright © 2020 - 2023  Davide Perini  (https://github.com/sblantipodi)
+  Copyright © 2020 - 2025  Davide Perini  (https://github.com/sblantipodi)
 
   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
@@ -22,22 +22,26 @@
 package org.dpsoftware.gui.controllers;
 
 import javafx.fxml.FXML;
-import javafx.scene.control.Button;
-import javafx.scene.control.ComboBox;
-import javafx.scene.control.Label;
-import javafx.scene.control.TextField;
+import javafx.geometry.Insets;
+import javafx.scene.control.*;
 import javafx.scene.input.InputEvent;
-import org.dpsoftware.FireflyLuciferin;
+import javafx.scene.layout.GridPane;
+import javafx.util.StringConverter;
+import org.dpsoftware.MainSingleton;
 import org.dpsoftware.NativeExecutor;
 import org.dpsoftware.config.Configuration;
 import org.dpsoftware.config.Constants;
 import org.dpsoftware.config.Enums;
 import org.dpsoftware.config.LocalizedEnum;
+import org.dpsoftware.gui.GuiSingleton;
 import org.dpsoftware.gui.elements.DisplayInfo;
+import org.dpsoftware.managers.NetworkManager;
 import org.dpsoftware.managers.StorageManager;
 import org.dpsoftware.utilities.CommonUtility;
 
+import java.util.List;
 import java.util.Locale;
+import java.util.Optional;
 
 /**
  * Mode Tab controller
@@ -56,11 +60,19 @@ public class ModeTabController {
     @FXML
     public ComboBox<Configuration.CaptureMethod> captureMethod;
     @FXML
+    public ComboBox<String> algo;
+    @FXML
     public TextField numberOfThreads;
     @FXML
     public Label comWirelessLabel;
     @FXML
     public Button saveSettingsButton;
+    @FXML
+    public ComboBox<String> simdOption;
+    @FXML
+    public RadioButton firmTypeFull;
+    @FXML
+    public Button resetButton;
     @FXML
     public ComboBox<String> monitorNumber;
     @FXML
@@ -71,7 +83,14 @@ public class ModeTabController {
     public ComboBox<String> language;
     @FXML
     public ComboBox<String> serialPort; // NOTE: for multi display this contain the deviceName of the MQTT device where to stream
+    @FXML
+    public RadioButton firmTypeLight;
+    public ToggleGroup firmwareTypeGrp;
     int monitorIndex;
+    @FXML
+    private Label cpuThreadsLabel;
+    @FXML
+    private Label simdAvxLabel;
     // Inject main controller
     @FXML
     private SettingsController settingsController;
@@ -90,8 +109,8 @@ public class ModeTabController {
      */
     @FXML
     protected void initialize() {
-        if (NativeExecutor.isLinux()) {
-            captureMethod.getItems().addAll(Configuration.CaptureMethod.XIMAGESRC);
+        for (Enums.Algo al : Enums.Algo.values()) {
+            algo.getItems().add(al.getI18n());
         }
         for (Enums.AspectRatio ar : Enums.AspectRatio.values()) {
             aspectRatio.getItems().add(ar.getI18n());
@@ -103,12 +122,43 @@ public class ModeTabController {
             baudRate.setDisable(true);
             serialPort.setDisable(true);
         }
+        if (NativeExecutor.isWindows()) {
+            GridPane.setMargin(saveSettingsButton, new Insets(-10, 0, 0, 0));
+        }
+    }
+
+    /**
+     * Handle key valye combo box
+     */
+    public void setCaptureMethodConverter() {
+        captureMethod.setConverter(new StringConverter<>() {
+            @Override
+            public String toString(Configuration.CaptureMethod object) {
+                return switch (object) {
+                    case CPU -> Configuration.CaptureMethod.CPU.name();
+                    case WinAPI -> Configuration.CaptureMethod.WinAPI.name();
+                    case DDUPL_DX11 -> Configuration.CaptureMethod.DDUPL_DX11.name();
+                    case DDUPL_DX12 -> Configuration.CaptureMethod.DDUPL_DX12.name();
+                    case XIMAGESRC -> Configuration.CaptureMethod.XIMAGESRC.name();
+                    case XIMAGESRC_NVIDIA -> Configuration.CaptureMethod.XIMAGESRC_NVIDIA.getCaptureMethod();
+                    case PIPEWIREXDG -> Configuration.CaptureMethod.PIPEWIREXDG.name();
+                    case PIPEWIREXDG_NVIDIA -> Configuration.CaptureMethod.PIPEWIREXDG_NVIDIA.getCaptureMethod();
+                    default -> null;
+                };
+            }
+
+            @Override
+            public Configuration.CaptureMethod fromString(String string) {
+                return null;
+            }
+        });
     }
 
     /**
      * Init combo boxes
      */
     public void initComboBox() {
+        scaling.getItems().add(Enums.ScalingRatio.RATIO_100.getScalingRatio());
         for (Enums.ScalingRatio scalingRatio : Enums.ScalingRatio.values()) {
             scaling.getItems().add(scalingRatio.getScalingRatio());
         }
@@ -121,6 +171,17 @@ public class ModeTabController {
         for (Enums.Language lang : Enums.Language.values()) {
             language.getItems().add(lang.getI18n());
         }
+        simdOption.getItems().add(Enums.SimdAvxOption.AUTO.getI18n());
+        if (MainSingleton.getInstance().getSupportedSpeciesLengthSimd() >= 16) {
+            simdOption.getItems().add(Enums.SimdAvxOption.AVX512.getI18n());
+        }
+        if (MainSingleton.getInstance().getSupportedSpeciesLengthSimd() >= 8) {
+            simdOption.getItems().add(Enums.SimdAvxOption.AVX256.getI18n());
+        }
+        if (MainSingleton.getInstance().getSupportedSpeciesLengthSimd() >= 8) {
+            simdOption.getItems().add(Enums.SimdAvxOption.AVX.getI18n());
+        }
+        simdOption.getItems().add(Enums.SimdAvxOption.DISABLED.getI18n());
     }
 
     /**
@@ -130,7 +191,12 @@ public class ModeTabController {
         monitorIndex = 0;
         monitorNumber.setValue(settingsController.displayManager.getDisplayName(monitorIndex));
         comWirelessLabel.setText(CommonUtility.getWord(Constants.SERIAL_PORT));
-        theme.setValue(Enums.Theme.DEFAULT.getI18n());
+        if (NativeExecutor.isDarkTheme()) {
+            theme.setValue(Enums.Theme.DARK_THEME_ORANGE.getI18n());
+        } else {
+            theme.setValue(Enums.Theme.CLASSIC.getI18n());
+        }
+        algo.setValue(Enums.Algo.AVG_COLOR.getI18n());
         language.setValue(Enums.Language.EN.getI18n());
         for (Enums.Language lang : Enums.Language.values()) {
             if (lang.name().equalsIgnoreCase(Locale.getDefault().getLanguage())) {
@@ -147,13 +213,27 @@ public class ModeTabController {
             setDispInfo(screenInfo);
             monitorNumber.setValue(settingsController.displayManager.getDisplayName(monitorIndex));
             if (NativeExecutor.isWindows()) {
-                captureMethod.setValue(Configuration.CaptureMethod.DDUPL);
+                captureMethod.setValue(Configuration.CaptureMethod.DDUPL_DX12);
             } else if (NativeExecutor.isMac()) {
-                captureMethod.setValue(Configuration.CaptureMethod.DDUPL);
+                captureMethod.setValue(Configuration.CaptureMethod.AVFVIDEOSRC);
             } else {
-                captureMethod.setValue(Configuration.CaptureMethod.XIMAGESRC);
+                if (NativeExecutor.isWayland()) {
+                    captureMethod.setValue(Configuration.CaptureMethod.PIPEWIREXDG);
+                } else {
+                    captureMethod.setValue(Configuration.CaptureMethod.XIMAGESRC);
+                }
             }
         }
+        if (GuiSingleton.getInstance().isFirmTypeFull()) {
+            firmTypeFull.setSelected(true);
+            firmTypeLight.setSelected(false);
+        } else {
+            firmTypeFull.setSelected(false);
+            firmTypeLight.setSelected(true);
+        }
+        simdOption.setValue(Enums.SimdAvxOption.AUTO.getI18n());
+        firmTypeEvaluation();
+        evalutateSimdCpuThreadCombo();
     }
 
     /**
@@ -164,7 +244,6 @@ public class ModeTabController {
     private void setDispInfo(DisplayInfo screenInfo) {
         double scaleX = screenInfo.getScaleX();
         double scaleY = screenInfo.getScaleY();
-
         screenWidth.setText(String.valueOf((int) (screenInfo.width * scaleX)));
         screenHeight.setText(String.valueOf((int) (screenInfo.height * scaleY)));
         scaling.setValue(((int) (screenInfo.getScaleX() * 100)) + Constants.PERCENT);
@@ -176,18 +255,39 @@ public class ModeTabController {
      * @param currentConfig stored config
      */
     public void initValuesFromSettingsFile(Configuration currentConfig) {
+        firmTypeFull.setSelected(currentConfig.isFullFirmware());
+        firmTypeLight.setSelected(!currentConfig.isFullFirmware());
+        if (!firmTypeFull.isSelected()) {
+            settingsController.setNetworkValue(false);
+        }
         if ((currentConfig.getMultiMonitor() == 2 || currentConfig.getMultiMonitor() == 3)
-                && serialPort.getItems() != null && serialPort.getItems().size() > 0) {
-            serialPort.getItems().remove(0);
+                && serialPort.getItems() != null && !serialPort.getItems().isEmpty()) {
+            serialPort.getItems().removeFirst();
         }
         screenWidth.setText(String.valueOf(currentConfig.getScreenResX()));
         screenHeight.setText(String.valueOf(currentConfig.getScreenResY()));
         scaling.setValue(currentConfig.getOsScaling() + Constants.PERCENT);
+        scaling.setEditable(true);
+        scaling.getEditor().textProperty().addListener((_, _, newValue) -> forceScalingValidation(newValue));
+        scaling.focusedProperty().addListener((_, _, focused) -> {
+            if (!focused) {
+                scaling.setValue((CommonUtility.removeChars(scaling.getValue())) + Constants.PERCENT);
+            }
+        });
         captureMethod.setValue(Configuration.CaptureMethod.valueOf(currentConfig.getCaptureMethod()));
-        if (currentConfig.isWirelessStream() && currentConfig.getOutputDevice().equals(Constants.SERIAL_PORT_AUTO) && currentConfig.getMultiMonitor() == 1) {
-            serialPort.setValue(FireflyLuciferin.config.getOutputDevice());
+        if (currentConfig.isWirelessStream() && currentConfig.getOutputDevice().equals(Constants.SERIAL_PORT_AUTO)
+                && ((currentConfig.getMultiMonitor() == 1) || (currentConfig.isMultiScreenSingleDevice()))) {
+            if (NetworkManager.isValidIp(MainSingleton.getInstance().config.getStaticGlowWormIp())) {
+                serialPort.setValue(MainSingleton.getInstance().config.getStaticGlowWormIp());
+            } else {
+                serialPort.setValue(MainSingleton.getInstance().config.getOutputDevice());
+            }
         } else {
-            serialPort.setValue(currentConfig.getOutputDevice());
+            if (NetworkManager.isValidIp(currentConfig.getStaticGlowWormIp())) {
+                serialPort.setValue(currentConfig.getStaticGlowWormIp());
+            } else {
+                serialPort.setValue(currentConfig.getOutputDevice());
+            }
         }
         numberOfThreads.setText(String.valueOf(currentConfig.getNumberOfCPUThreads()));
         if (currentConfig.isAutoDetectBlackBars()) {
@@ -195,28 +295,126 @@ public class ModeTabController {
         } else {
             aspectRatio.setValue(LocalizedEnum.fromBaseStr(Enums.AspectRatio.class, currentConfig.getDefaultLedMatrix()).getI18n());
         }
+        algo.setValue(LocalizedEnum.fromBaseStr(Enums.Algo.class, currentConfig.getAlgo()).getI18n());
         monitorIndex = currentConfig.getMonitorNumber();
         monitorNumber.setValue(settingsController.displayManager.getDisplayName(monitorIndex));
         baudRate.setValue(currentConfig.getBaudRate());
         baudRate.setDisable(CommonUtility.isSingleDeviceOtherInstance());
         theme.setValue(LocalizedEnum.fromBaseStr(Enums.Theme.class, currentConfig.getTheme()).getI18n());
-        language.setValue(LocalizedEnum.fromBaseStr(Enums.Language.class, currentConfig.getLanguage() == null ? FireflyLuciferin.config.getLanguage() : currentConfig.getLanguage()).getI18n());
+        language.setValue(LocalizedEnum.fromBaseStr(Enums.Language.class, currentConfig.getLanguage() == null ? MainSingleton.getInstance().config.getLanguage() : currentConfig.getLanguage()).getI18n());
+        resetButton.setVisible(Configuration.CaptureMethod.valueOf(currentConfig.getCaptureMethod()).equals(Configuration.CaptureMethod.PIPEWIREXDG)
+                || Configuration.CaptureMethod.valueOf(currentConfig.getCaptureMethod()).equals(Configuration.CaptureMethod.PIPEWIREXDG_NVIDIA));
+        simdOption.setValue(Enums.SimdAvxOption.findByValue(MainSingleton.getInstance().config.getSimdAvx()).getI18n());
+        evalutateSimdCpuThreadCombo();
+    }
+
+    /**
+     * Show hide Simd Thread combos
+     */
+    private void evalutateSimdCpuThreadCombo() {
+        if (captureMethod.getValue().getCaptureMethod().equals(Configuration.CaptureMethod.CPU.name())
+                || captureMethod.getValue().getCaptureMethod().equals(Configuration.CaptureMethod.WinAPI.name())) {
+            simdAvxLabel.setVisible(false);
+            simdOption.setVisible(false);
+            cpuThreadsLabel.setVisible(true);
+            numberOfThreads.setVisible(true);
+        } else {
+            simdAvxLabel.setVisible(true);
+            simdOption.setVisible(true);
+            cpuThreadsLabel.setVisible(false);
+            numberOfThreads.setVisible(false);
+        }
+    }
+
+    /**
+     * Force framerate validation
+     *
+     * @param newValue combobox new value
+     */
+    private void forceScalingValidation(String newValue) {
+        if (MainSingleton.getInstance().config != null) {
+            CommonUtility.removeChars(newValue);
+            scaling.cancelEdit();
+            String val = CommonUtility.removeChars(newValue);
+            if (newValue.contains(Constants.PERCENT)) {
+                val += Constants.PERCENT;
+            }
+            scaling.getItems().set(0, val);
+            scaling.setValue(val);
+
+        }
+    }
+
+    /**
+     * Manage monitor action
+     */
+    @FXML
+    private void monitorAction() {
+        monitorIndex = monitorNumber.getSelectionModel().getSelectedIndex();
+        DisplayInfo screenInfo = settingsController.displayManager.getDisplayList().get(monitorIndex);
+        setDispInfo(screenInfo);
     }
 
     /**
      * Init all the settings listener
      */
     public void initListeners() {
-        monitorNumber.valueProperty().addListener((ov, oldVal, newVal) -> {
-            monitorIndex = monitorNumber.getSelectionModel().getSelectedIndex();
-            DisplayInfo screenInfo = settingsController.displayManager.getDisplayList().get(monitorIndex);
-            setDispInfo(screenInfo);
-        });
-        serialPort.valueProperty().addListener((ov, oldVal, newVal) -> {
+        firmTypeFull.setOnAction(_ -> firmTypeEvaluation());
+        firmTypeLight.setOnAction(_ -> firmTypeEvaluation());
+        monitorNumber.valueProperty().addListener((_, _, _) -> monitorAction());
+        serialPort.valueProperty().addListener((_, oldVal, newVal) -> {
             if (oldVal != null && newVal != null && !oldVal.equals(newVal)) {
                 settingsController.checkProfileDifferences();
             }
         });
+        captureMethod.valueProperty().addListener((_, _, newVal) -> {
+            if (newVal.equals(Configuration.CaptureMethod.XIMAGESRC_NVIDIA) || newVal.equals(Configuration.CaptureMethod.PIPEWIREXDG_NVIDIA)) {
+                List<String> scrProcess = NativeExecutor.runNative(Constants.CMD_CUDA_CHECK, Constants.CMD_WAIT_DELAY);
+                boolean pluginsFound = true;
+                for (String plugin : Constants.CUDA_REQUIRED_PLUGINS) {
+                    if (scrProcess.stream().noneMatch(str -> str.trim().contains(plugin))) {
+                        pluginsFound = false;
+                    }
+                }
+                if (!pluginsFound && !NativeExecutor.isRunningOnSandbox()) {
+                    Optional<ButtonType> result = MainSingleton.getInstance().guiManager.showAlert(CommonUtility.getWord(Constants.CUDA_ERROR_TITLE), CommonUtility.getWord(Constants.CUDA_ERROR_HEADER),
+                            CommonUtility.getWord(Constants.CUDA_ERROR_CONTEXT), Alert.AlertType.CONFIRMATION);
+                    ButtonType button = result.orElse(ButtonType.OK);
+                    if (button == ButtonType.OK) {
+                        MainSingleton.getInstance().guiManager.surfToURL(Constants.LINUX_WIKI_URL);
+                    }
+                }
+            }
+            evalutateSimdCpuThreadCombo();
+        });
+        simdOption.valueProperty().addListener((_, oldVal, newVal) -> {
+            if (MainSingleton.getInstance().config != null) {
+                if (oldVal != null && newVal != null && !oldVal.equals(newVal)) {
+                    settingsController.checkProfileDifferences();
+                }
+            }
+        });
+    }
+
+    /**
+     * Evaluate tab fields once Full/Light firmware type has been selected
+     */
+    public void firmTypeEvaluation() {
+        settingsController.setNetworkValue(firmTypeFull.isSelected());
+        settingsController.evaluateSatBtn(firmTypeFull.isSelected());
+        settingsController.initOutputDeviceChooser(false);
+    }
+
+    /**
+     * Reset button event
+     *
+     * @param e event
+     */
+    @FXML
+    public void reset(InputEvent e) {
+        MainSingleton.getInstance().config.setScreenCastRestoreToken("");
+        settingsController.save(e);
+        NativeExecutor.restartNativeInstance();
     }
 
     /**
@@ -236,8 +434,18 @@ public class ModeTabController {
      */
     @FXML
     public void save(Configuration config) {
+        config.setFullFirmware(firmTypeFull.isSelected());
+        if (MainSingleton.getInstance() != null && MainSingleton.getInstance().config != null) {
+            config.setScreenCastRestoreToken(MainSingleton.getInstance().config.getScreenCastRestoreToken());
+        }
         config.setNumberOfCPUThreads(Integer.parseInt(numberOfThreads.getText()));
-        config.setOutputDevice(serialPort.getValue());
+        if (NetworkManager.isValidIp(serialPort.getValue())) {
+            config.setOutputDevice(Constants.SERIAL_PORT_AUTO);
+            config.setStaticGlowWormIp(serialPort.getValue());
+        } else {
+            config.setOutputDevice(serialPort.getValue());
+            config.setStaticGlowWormIp(Constants.DASH);
+        }
         config.setScreenResX(Integer.parseInt(screenWidth.getText()));
         config.setScreenResY(Integer.parseInt(screenHeight.getText()));
         config.setOsScaling(Integer.parseInt((scaling.getValue()).replace(Constants.PERCENT, "")));
@@ -252,6 +460,8 @@ public class ModeTabController {
                 || captureMethod.getValue().name().equals(Configuration.CaptureMethod.WinAPI.name())) {
             config.setGroupBy(Constants.GROUP_BY_LEDS);
         }
+        config.setAlgo(LocalizedEnum.fromStr(Enums.Algo.class, algo.getValue()).getBaseI18n());
+        config.setSimdAvx(LocalizedEnum.fromStr(Enums.SimdAvxOption.class, simdOption.getValue()).getSimdOptionNumeric());
     }
 
     /**
@@ -268,6 +478,9 @@ public class ModeTabController {
      * @param currentConfig stored config
      */
     void setTooltips(Configuration currentConfig) {
+        firmTypeFull.setTooltip(settingsController.createTooltip(Constants.INITIAL_CONTEXT));
+        firmTypeLight.setTooltip(settingsController.createTooltip(Constants.INITIAL_CONTEXT));
+        resetButton.setTooltip(settingsController.createTooltip(Constants.TOOLTIP_RESET_WAYLAND));
         screenWidth.setTooltip(settingsController.createTooltip(Constants.TOOLTIP_SCREENWIDTH));
         screenHeight.setTooltip(settingsController.createTooltip(Constants.TOOLTIP_SCREENHEIGHT));
         scaling.setTooltip(settingsController.createTooltip(Constants.TOOLTIP_SCALING));
@@ -279,6 +492,7 @@ public class ModeTabController {
             captureMethod.setTooltip(settingsController.createTooltip(Constants.TOOLTIP_LINUXCAPTUREMETHOD));
         }
         numberOfThreads.setTooltip(settingsController.createTooltip(Constants.TOOLTIP_NUMBEROFTHREADS));
+        simdOption.setTooltip(settingsController.createTooltip(Constants.TOOLTIP_SIMD));
         serialPort.setTooltip(settingsController.createTooltip(Constants.TOOLTIP_SERIALPORT));
         aspectRatio.setTooltip(settingsController.createTooltip(Constants.TOOLTIP_ASPECTRATIO));
         monitorNumber.setTooltip(settingsController.createTooltip(Constants.TOOLTIP_MONITORNUMBER));
@@ -296,8 +510,8 @@ public class ModeTabController {
      * Lock TextField in a numeric state
      */
     void setNumericTextField() {
-        settingsController.addTextFieldListener(screenWidth);
-        settingsController.addTextFieldListener(screenHeight);
-        settingsController.addTextFieldListener(numberOfThreads);
+        SettingsController.addTextFieldListener(screenWidth);
+        SettingsController.addTextFieldListener(screenHeight);
+        SettingsController.addTextFieldListener(numberOfThreads);
     }
 }
