@@ -4,7 +4,7 @@
   Firefly Luciferin, very fast Java Screen Capture software designed
   for Glow Worm Luciferin firmware.
 
-  Copyright © 2020 - 2023  Davide Perini  (https://github.com/sblantipodi)
+  Copyright © 2020 - 2025  Davide Perini  (https://github.com/sblantipodi)
 
   This program is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
@@ -24,6 +24,8 @@ package org.dpsoftware.gui.controllers;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.scene.Node;
+import javafx.scene.control.Button;
+import javafx.scene.control.Label;
 import javafx.scene.control.TextField;
 import javafx.scene.control.*;
 import javafx.scene.input.InputEvent;
@@ -33,13 +35,15 @@ import javafx.util.Callback;
 import javafx.util.Duration;
 import lombok.extern.slf4j.Slf4j;
 import org.dpsoftware.FireflyLuciferin;
-import org.dpsoftware.JavaFXStarter;
 import org.dpsoftware.LEDCoordinate;
+import org.dpsoftware.MainSingleton;
 import org.dpsoftware.NativeExecutor;
 import org.dpsoftware.config.Configuration;
 import org.dpsoftware.config.Constants;
 import org.dpsoftware.config.Enums;
 import org.dpsoftware.config.LocalizedEnum;
+import org.dpsoftware.gui.GuiManager;
+import org.dpsoftware.gui.GuiSingleton;
 import org.dpsoftware.gui.elements.DisplayInfo;
 import org.dpsoftware.managers.DisplayManager;
 import org.dpsoftware.managers.NetworkManager;
@@ -69,6 +73,8 @@ public class SettingsController {
     public MiscTabController miscTabController;
     // FXML binding
     @FXML
+    public AnchorPane shadowPane;
+    @FXML
     public TabPane mainTabPane;
     @FXML
     public AnchorPane ledsConfigTab;
@@ -77,17 +83,21 @@ public class SettingsController {
     @FXML
     public AnchorPane modeTab;
     @FXML
-    public AnchorPane mqttTab;
+    public AnchorPane networkTab;
     @FXML
     public AnchorPane miscTab;
     @FXML
     public AnchorPane devicesTab;
+    @FXML
+    public Button closeWindowBtn;
+    @FXML
+    public Button minimizeWindowBtn;
     Configuration currentConfig;
     StorageManager sm;
     DisplayManager displayManager;
     // Inject children tab controllers
     @FXML
-    private MqttTabController mqttTabController;
+    private NetworkTabController networkTabController;
     @FXML
     private DevicesTabController devicesTabController;
     @FXML
@@ -100,6 +110,23 @@ public class SettingsController {
     private ColorCorrectionDialogController colorCorrectionDialogController;
     @FXML
     private EyeCareDialogController eyeCareDialogController;
+    @FXML
+    private SatellitesDialogController satellitesDialogController;
+
+    /**
+     * Force TextField to be numeric
+     *
+     * @param textField numeric fields
+     */
+    public static void addTextFieldListener(TextField textField) {
+        textField.textProperty().addListener((_, _, newValue) -> {
+            if (newValue.isEmpty()) {
+                textField.setText("0");
+            } else {
+                textField.setText(CommonUtility.removeChars(newValue));
+            }
+        });
+    }
 
     /**
      * Initialize controller with system's specs
@@ -107,13 +134,12 @@ public class SettingsController {
     @FXML
     protected void initialize() {
         // Inject main controller into children
-        mqttTabController.injectSettingsController(this);
+        networkTabController.injectSettingsController(this);
         devicesTabController.injectSettingsController(this);
         modeTabController.injectSettingsController(this);
         miscTabController.injectSettingsController(this);
         ledsConfigTabController.injectSettingsController(this);
         controlTabController.injectSettingsController(this);
-
         Platform.setImplicitExit(false);
         sm = new StorageManager();
         displayManager = new DisplayManager();
@@ -131,16 +157,15 @@ public class SettingsController {
         }
         currentConfig = sm.readProfileInUseConfig();
         ledsConfigTabController.showTestImageButton.setVisible(currentConfig != null);
-
         initComboBox();
-        if (NativeExecutor.isWindows()) {
-            mainTabPane.getTabs().remove(0);
+        if (NativeExecutor.isSystemTraySupported()) {
+            mainTabPane.getTabs().removeFirst();
         }
         if (currentConfig != null && CommonUtility.isSingleDeviceMultiScreen()) {
-            if (JavaFXStarter.whoAmI > 1) {
-                if (NativeExecutor.isLinux()) {
+            if (MainSingleton.getInstance().whoAmI > 1) {
+                if (!NativeExecutor.isSystemTraySupported()) {
                     mainTabPane.getTabs().remove(3, 6);
-                } else if (NativeExecutor.isWindows()) {
+                } else {
                     mainTabPane.getTabs().remove(2, 5);
                 }
             }
@@ -154,6 +179,10 @@ public class SettingsController {
         runLater();
         initListeners();
         controlTabController.startAnimationTimer();
+        Label titleBarLabel = (Label) shadowPane.lookup(Constants.TITLE_BAR_SELECTOR);
+        if (titleBarLabel != null) {
+            titleBarLabel.setText(GuiManager.createWindowTitle().trim());
+        }
     }
 
     /**
@@ -163,16 +192,15 @@ public class SettingsController {
         modeTabController.initComboBox();
         miscTabController.initComboBox();
         devicesTabController.initComboBox();
-        mqttTabController.initComboBox();
+        networkTabController.initComboBox();
     }
 
     /**
      * Init form values
      */
     void initDefaultValues() {
-        initOutputDeviceChooser(true);
         if (currentConfig == null) {
-            mqttTabController.initDefaultValues();
+            networkTabController.initDefaultValues();
             devicesTabController.initDefaultValues();
             modeTabController.initDefaultValues();
             miscTabController.initDefaultValues();
@@ -183,13 +211,14 @@ public class SettingsController {
         } else {
             initValuesFromSettingsFile();
         }
+        initOutputDeviceChooser(true);
     }
 
     /**
      * Init form values by reading existing config file
      */
     private void initValuesFromSettingsFile() {
-        mqttTabController.initValuesFromSettingsFile(currentConfig);
+        networkTabController.initValuesFromSettingsFile(currentConfig);
         devicesTabController.initValuesFromSettingsFile(currentConfig);
         modeTabController.initValuesFromSettingsFile(currentConfig);
         miscTabController.initValuesFromSettingsFile(currentConfig);
@@ -206,8 +235,8 @@ public class SettingsController {
         Platform.runLater(() -> {
             Stage stage = (Stage) mainTabPane.getScene().getWindow();
             if (stage != null) {
-                stage.setOnCloseRequest(evt -> {
-                    if (!NativeExecutor.isSystemTraySupported() || NativeExecutor.isLinux()) {
+                stage.setOnCloseRequest(_ -> {
+                    if (!NativeExecutor.isSystemTraySupported()) {
                         NativeExecutor.exit();
                     } else {
                         controlTabController.animationTimer.stop();
@@ -224,15 +253,15 @@ public class SettingsController {
      */
     private void initListeners() {
         setSerialPortAvailableCombo();
-        mqttTabController.initListeners();
+        networkTabController.initListeners();
         modeTabController.initListeners();
         miscTabController.initListeners(currentConfig);
         ledsConfigTabController.initListeners();
-        devicesTabController.multiMonitor.valueProperty().addListener((ov, t, value) -> {
+        devicesTabController.multiMonitor.valueProperty().addListener((_, _, value) -> {
             if (!modeTabController.serialPort.isFocused()) {
                 if (!value.equals(Constants.MULTIMONITOR_1)) {
-                    if (modeTabController.serialPort.getItems().size() > 0 && modeTabController.serialPort.getItems().get(0).equals(Constants.SERIAL_PORT_AUTO)) {
-                        modeTabController.serialPort.getItems().remove(0);
+                    if (!modeTabController.serialPort.getItems().isEmpty() && modeTabController.serialPort.getItems().getFirst().equals(Constants.SERIAL_PORT_AUTO)) {
+                        modeTabController.serialPort.getItems().removeFirst();
                         if (NativeExecutor.isWindows()) {
                             modeTabController.serialPort.setValue(Constants.SERIAL_PORT_COM + 1);
                         } else {
@@ -241,7 +270,7 @@ public class SettingsController {
                     }
                 } else {
                     if (!modeTabController.serialPort.getItems().contains(Constants.SERIAL_PORT_AUTO)) {
-                        modeTabController.serialPort.getItems().add(0, Constants.SERIAL_PORT_AUTO);
+                        modeTabController.serialPort.getItems().addFirst(Constants.SERIAL_PORT_AUTO);
                     }
                 }
             }
@@ -287,8 +316,8 @@ public class SettingsController {
     public void manageDeviceList() {
         devicesTabController.manageDeviceList();
         if (!devicesTabController.cellEdit) {
-            if (mqttTabController.mqttStream.isSelected()) {
-                initOutputDeviceChooser(true);
+            if (networkTabController.mqttStream.isSelected()) {
+                initOutputDeviceChooser(false);
             }
         }
     }
@@ -326,33 +355,18 @@ public class SettingsController {
             LinkedHashMap<Integer, LEDCoordinate> fitToScreenMatrix = ledCoordinate.initPillarboxMatrix(ledMatrixInfoPillarbox);
             Map<Enums.ColorEnum, HSLColor> hueMap = ColorCorrectionDialogController.initHSLMap();
             Configuration config = new Configuration(ledFullScreenMatrix, ledLetterboxMatrix, fitToScreenMatrix, hueMap);
-            if (FireflyLuciferin.config != null) {
-                config.setRuntimeLogLevel(FireflyLuciferin.config.getRuntimeLogLevel());
+            if (MainSingleton.getInstance().config != null) {
+                config.setRuntimeLogLevel(MainSingleton.getInstance().config.getRuntimeLogLevel());
             }
             ledsConfigTabController.save(config);
             modeTabController.save(config);
             miscTabController.save(config);
-            mqttTabController.save(config);
+            networkTabController.save(config);
             devicesTabController.save(config);
-            if (colorCorrectionDialogController != null) {
-                colorCorrectionDialogController.save(config);
-            } else if (FireflyLuciferin.config != null) {
-                config.setHueMap(FireflyLuciferin.config.getHueMap());
-            }
-            if (eyeCareDialogController != null) {
-                eyeCareDialogController.save(config);
-            } else {
-                if (FireflyLuciferin.config != null) {
-                    config.setEnableLDR(FireflyLuciferin.config.isEnableLDR());
-                    config.setLdrTurnOff(FireflyLuciferin.config.isLdrTurnOff());
-                    config.setLdrInterval(FireflyLuciferin.config.getLdrInterval());
-                    config.setLdrMin(FireflyLuciferin.config.getLdrMin());
-                    config.setBrightnessLimiter(FireflyLuciferin.config.getBrightnessLimiter());
-                }
-            }
+            saveDialogues(config);
             setCaptureMethod(config);
-            config.setConfigVersion(FireflyLuciferin.version);
-            boolean firstStartup = FireflyLuciferin.config == null;
+            config.setConfigVersion(MainSingleton.getInstance().version);
+            boolean firstStartup = MainSingleton.getInstance().config == null;
             if (config.isFullFirmware() && !config.isMqttEnable() && firstStartup) {
                 config.setOutputDevice(Constants.SERIAL_PORT_AUTO);
             }
@@ -374,17 +388,48 @@ public class SettingsController {
     }
 
     /**
+     * Save settings from sub dialogues
+     *
+     * @param config from file
+     */
+    private void saveDialogues(Configuration config) {
+        if (colorCorrectionDialogController != null) {
+            colorCorrectionDialogController.save(config);
+        } else if (MainSingleton.getInstance().config != null) {
+            config.setHueMap(MainSingleton.getInstance().config.getHueMap());
+        }
+        if (eyeCareDialogController != null) {
+            eyeCareDialogController.save(config);
+        } else {
+            if (MainSingleton.getInstance().config != null) {
+                config.setEnableLDR(MainSingleton.getInstance().config.isEnableLDR());
+                config.setLdrTurnOff(MainSingleton.getInstance().config.isLdrTurnOff());
+                config.setLdrInterval(MainSingleton.getInstance().config.getLdrInterval());
+                config.setLdrMin(MainSingleton.getInstance().config.getLdrMin());
+                config.setBrightnessLimiter(MainSingleton.getInstance().config.getBrightnessLimiter());
+            }
+        }
+        if (satellitesDialogController != null) {
+            satellitesDialogController.save(config);
+        } else {
+            if (MainSingleton.getInstance().config != null) {
+                config.setSatellites(MainSingleton.getInstance().config.getSatellites());
+            }
+        }
+    }
+
+    /**
      * Write default config
      *
      * @param e            event that triggered the save event
      * @param config       config to save
-     * @param firstStartup check if config exist
+     * @param firstStartup true if no config file is present  check if config exist
      * @throws IOException                can't write
      * @throws CloneNotSupportedException can't clone
      */
     private void writeDefaultConfig(InputEvent e, Configuration config, boolean firstStartup) throws IOException, CloneNotSupportedException {
         // Manage settings from one instance to the other, for multi monitor setup
-        if (JavaFXStarter.whoAmI != 1) {
+        if (MainSingleton.getInstance().whoAmI != 1) {
             Configuration mainConfig = sm.readMainConfig();
             mainConfig.setGamma(config.getGamma());
             mainConfig.setWhiteTemperature(config.getWhiteTemperature());
@@ -394,7 +439,7 @@ public class SettingsController {
             sm.writeConfig(mainConfig, Constants.CONFIG_FILENAME);
         }
         if (config.getMultiMonitor() > 1) {
-            switch (JavaFXStarter.whoAmI) {
+            switch (MainSingleton.getInstance().whoAmI) {
                 case 1 -> {
                     writeOtherConfig(config, Constants.CONFIG_FILENAME_2);
                     if (config.getMultiMonitor() == 3) writeOtherConfig(config, Constants.CONFIG_FILENAME_3);
@@ -407,9 +452,9 @@ public class SettingsController {
         }
         Configuration defaultConfig = sm.readProfileInUseConfig();
         sm.writeConfig(config, null);
-        FireflyLuciferin.config = config;
-        sm.checkProfileDifferences(defaultConfig, FireflyLuciferin.config);
-        if (firstStartup || (JavaFXStarter.whoAmI == 1 && ((config.getMultiMonitor() == 2 && !sm.checkIfFileExist(Constants.CONFIG_FILENAME_2))
+        MainSingleton.getInstance().config = config;
+        sm.checkProfileDifferences(defaultConfig, MainSingleton.getInstance().config);
+        if (firstStartup || (MainSingleton.getInstance().whoAmI == 1 && ((config.getMultiMonitor() == 2 && !sm.checkIfFileExist(Constants.CONFIG_FILENAME_2))
                 || (config.getMultiMonitor() == 3 && (!sm.checkIfFileExist(Constants.CONFIG_FILENAME_2) || !sm.checkIfFileExist(Constants.CONFIG_FILENAME_3)))))) {
             writeOtherConfigNew(config);
             cancel(e);
@@ -432,27 +477,28 @@ public class SettingsController {
      * @return true if something changed
      */
     public boolean isMqttParamChanged() {
-        return currentConfig.isMqttEnable() != mqttTabController.mqttEnable.isSelected()
-                || !currentConfig.getMqttServer().equals(mqttTabController.mqttHost.getText() + ":" + mqttTabController.mqttPort.getText())
-                || !currentConfig.getMqttTopic().equals(mqttTabController.mqttTopic.getText())
-                || !currentConfig.getMqttUsername().equals(mqttTabController.mqttUser.getText())
-                || !currentConfig.getMqttPwd().equals(mqttTabController.mqttPwd.getText());
+        return currentConfig.isWirelessStream() != networkTabController.mqttStream.isSelected()
+                || currentConfig.isMqttEnable() != networkTabController.mqttEnable.isSelected()
+                || !currentConfig.getMqttServer().equals(networkTabController.mqttHost.getText() + ":" + networkTabController.mqttPort.getText())
+                || !currentConfig.getMqttTopic().equals(networkTabController.mqttTopic.getText())
+                || !currentConfig.getMqttUsername().equals(networkTabController.mqttUser.getText())
+                || !currentConfig.getMqttPwd().equals(networkTabController.mqttPwd.getText());
     }
 
     /**
      * Refresh all the values displayed on the scene after save or profiles switch
      */
     public void refreshValuesOnScene() {
-        mqttTabController.initValuesFromSettingsFile(FireflyLuciferin.config);
-        devicesTabController.initValuesFromSettingsFile(FireflyLuciferin.config);
-        miscTabController.initValuesFromSettingsFile(FireflyLuciferin.config, false);
-        ledsConfigTabController.initValuesFromSettingsFile(FireflyLuciferin.config);
+        networkTabController.initValuesFromSettingsFile(MainSingleton.getInstance().config);
+        devicesTabController.initValuesFromSettingsFile(MainSingleton.getInstance().config);
+        miscTabController.initValuesFromSettingsFile(MainSingleton.getInstance().config, false);
+        ledsConfigTabController.initValuesFromSettingsFile(MainSingleton.getInstance().config);
         controlTabController.initValuesFromSettingsFile();
-        modeTabController.initValuesFromSettingsFile(FireflyLuciferin.config);
-        ledsConfigTabController.splitBottomMargin.setValue(FireflyLuciferin.config.getSplitBottomMargin());
+        modeTabController.initValuesFromSettingsFile(MainSingleton.getInstance().config);
+        ledsConfigTabController.splitBottomMargin.setValue(MainSingleton.getInstance().config.getSplitBottomMargin());
         ledsConfigTabController.splitBottomRow();
         miscTabController.setContextMenu();
-        FireflyLuciferin.setLedNumber(FireflyLuciferin.config.getDefaultLedMatrix());
+        FireflyLuciferin.setLedNumber(MainSingleton.getInstance().config.getDefaultLedMatrix());
     }
 
     /**
@@ -464,7 +510,8 @@ public class SettingsController {
         NativeExecutor nativeExecutor = new NativeExecutor();
         if (NativeExecutor.isWindows()) {
             switch (modeTabController.captureMethod.getValue()) {
-                case DDUPL -> config.setCaptureMethod(Configuration.CaptureMethod.DDUPL.name());
+                case DDUPL_DX11 -> config.setCaptureMethod(Configuration.CaptureMethod.DDUPL_DX11.name());
+                case DDUPL_DX12 -> config.setCaptureMethod(Configuration.CaptureMethod.DDUPL_DX12.name());
                 case WinAPI -> config.setCaptureMethod(Configuration.CaptureMethod.WinAPI.name());
                 case CPU -> config.setCaptureMethod(Configuration.CaptureMethod.CPU.name());
             }
@@ -481,6 +528,12 @@ public class SettingsController {
         } else {
             if (modeTabController.captureMethod.getValue() == Configuration.CaptureMethod.XIMAGESRC) {
                 config.setCaptureMethod(Configuration.CaptureMethod.XIMAGESRC.name());
+            } else if (modeTabController.captureMethod.getValue() == Configuration.CaptureMethod.XIMAGESRC_NVIDIA) {
+                config.setCaptureMethod(Configuration.CaptureMethod.XIMAGESRC_NVIDIA.name());
+            } else if (modeTabController.captureMethod.getValue() == Configuration.CaptureMethod.PIPEWIREXDG) {
+                config.setCaptureMethod(Configuration.CaptureMethod.PIPEWIREXDG.name());
+            } else if (modeTabController.captureMethod.getValue() == Configuration.CaptureMethod.PIPEWIREXDG_NVIDIA) {
+                config.setCaptureMethod(Configuration.CaptureMethod.PIPEWIREXDG_NVIDIA.name());
             }
         }
     }
@@ -497,11 +550,11 @@ public class SettingsController {
     void programFirmware(Configuration config, InputEvent e, String oldBaudrate, boolean isBaudRateChanged, boolean isMqttParamChanged) throws IOException {
         AtomicReference<String> macToProgram = new AtomicReference<>("");
         if (currentConfig.isFullFirmware()) {
-            if (DevicesTabController.deviceTableData != null && DevicesTabController.deviceTableData.size() > 0) {
+            if (GuiSingleton.getInstance().deviceTableData != null && !GuiSingleton.getInstance().deviceTableData.isEmpty()) {
                 if (Constants.SERIAL_PORT_AUTO.equals(modeTabController.serialPort.getValue())) {
-                    macToProgram.set(DevicesTabController.deviceTableData.get(0).getMac());
+                    macToProgram.set(GuiSingleton.getInstance().deviceTableData.getFirst().getMac());
                 }
-                DevicesTabController.deviceTableData.forEach(glowWormDevice -> {
+                GuiSingleton.getInstance().deviceTableData.forEach(glowWormDevice -> {
                     if (glowWormDevice.getDeviceName().equals(modeTabController.serialPort.getValue()) || glowWormDevice.getDeviceIP().equals(modeTabController.serialPort.getValue())) {
                         macToProgram.set(glowWormDevice.getMac());
                     }
@@ -512,14 +565,14 @@ public class SettingsController {
             }
         }
         if (isBaudRateChanged) {
-            Optional<ButtonType> result = FireflyLuciferin.guiManager.showLocalizedAlert(Constants.BAUDRATE_TITLE, Constants.BAUDRATE_HEADER,
+            Optional<ButtonType> result = MainSingleton.getInstance().guiManager.showLocalizedAlert(Constants.BAUDRATE_TITLE, Constants.BAUDRATE_HEADER,
                     Constants.BAUDRATE_CONTEXT, Alert.AlertType.CONFIRMATION);
             ButtonType button = result.orElse(ButtonType.OK);
             if (button == ButtonType.OK) {
                 if (currentConfig.isFullFirmware()) {
                     setFirmwareConfig(macToProgram.get(), true);
                 } else {
-                    FireflyLuciferin.baudRate = Enums.BaudRate.valueOf(Constants.BAUD_RATE_PLACEHOLDER + modeTabController.baudRate.getValue()).getBaudRateValue();
+                    MainSingleton.getInstance().baudRate = Enums.BaudRate.valueOf(Constants.BAUD_RATE_PLACEHOLDER + modeTabController.baudRate.getValue()).getBaudRateValue();
                     SerialManager serialManager = new SerialManager();
                     serialManager.sendSerialParams((int) (miscTabController.colorPicker.getValue().getRed() * 255),
                             (int) (miscTabController.colorPicker.getValue().getGreen() * 255),
@@ -544,21 +597,21 @@ public class SettingsController {
      */
     public void setFirmwareConfig(String macToProgram, boolean changeBaudrate) {
         if (CommonUtility.getDeviceToUse() != null && CommonUtility.getDeviceToUse().getDeviceName() != null
-                && (CommonUtility.getDeviceToUse().getDeviceName().equals(FireflyLuciferin.config.getOutputDevice())
+                && (CommonUtility.getDeviceToUse().getDeviceName().equals(MainSingleton.getInstance().config.getOutputDevice())
                 || CommonUtility.getDeviceToUse().getMac().equals(macToProgram))) {
             var device = CommonUtility.getDeviceToUse();
             FirmwareConfigDto firmwareConfigDto = new FirmwareConfigDto();
             firmwareConfigDto.setDeviceName(device.getDeviceName());
             firmwareConfigDto.setMicrocontrollerIP(device.isDhcpInUse() ? "" : device.getDeviceIP());
-            firmwareConfigDto.setMqttCheckbox(mqttTabController.mqttEnable.isSelected());
+            firmwareConfigDto.setMqttCheckbox(networkTabController.mqttEnable.isSelected());
             firmwareConfigDto.setSsid("");
             firmwareConfigDto.setWifipwd("");
-            if (mqttTabController.mqttEnable.isSelected()) {
-                firmwareConfigDto.setMqttIP(mqttTabController.mqttHost.getText().split("//")[1]);
-                firmwareConfigDto.setMqttPort(mqttTabController.mqttPort.getText());
-                firmwareConfigDto.setMqttTopic(mqttTabController.mqttTopic.getText());
-                firmwareConfigDto.setMqttuser(mqttTabController.mqttUser.getText());
-                firmwareConfigDto.setMqttpass(mqttTabController.mqttPwd.getText());
+            if (networkTabController.mqttEnable.isSelected()) {
+                firmwareConfigDto.setMqttIP(networkTabController.mqttHost.getText().split("//")[1]);
+                firmwareConfigDto.setMqttPort(networkTabController.mqttPort.getText());
+                firmwareConfigDto.setMqttTopic(networkTabController.mqttTopic.getText());
+                firmwareConfigDto.setMqttuser(networkTabController.mqttUser.getText());
+                firmwareConfigDto.setMqttpass(networkTabController.mqttPwd.getText());
             }
             firmwareConfigDto.setAdditionalParam(device.getGpio());
             firmwareConfigDto.setColorMode(String.valueOf(miscTabController.colorMode.getSelectionModel().getSelectedIndex() + 1));
@@ -569,10 +622,8 @@ public class SettingsController {
             TcpResponse tcpResponse = NetworkManager.publishToTopic(Constants.HTTP_SETTING, CommonUtility.toJsonString(firmwareConfigDto), true);
             if (tcpResponse.getErrorCode() == Constants.HTTP_SUCCESS) {
                 log.info(CommonUtility.getWord(Constants.FIRMWARE_PROGRAM_NOTIFY_HEADER));
-                if (NativeExecutor.isWindows()) {
-                    FireflyLuciferin.guiManager.showLocalizedNotification(CommonUtility.getWord(Constants.FIRMWARE_PROGRAM_NOTIFY),
-                            CommonUtility.getWord(Constants.FIRMWARE_PROGRAM_NOTIFY_HEADER), TrayIcon.MessageType.INFO);
-                }
+                MainSingleton.getInstance().guiManager.showLocalizedNotification(CommonUtility.getWord(Constants.FIRMWARE_PROGRAM_NOTIFY),
+                        CommonUtility.getWord(Constants.FIRMWARE_PROGRAM_NOTIFY_HEADER), Constants.FIREFLY_LUCIFERIN, TrayIcon.MessageType.INFO);
             }
         }
     }
@@ -636,6 +687,7 @@ public class SettingsController {
         }
         if (config.isMultiScreenSingleDevice() && config.getMultiMonitor() > 1) {
             otherConfig.setOutputDevice(config.getOutputDevice());
+            otherConfig.setStaticGlowWormIp(config.getStaticGlowWormIp());
             otherConfig.setBaudRate(config.getBaudRate());
             otherConfig.setMqttServer(config.getMqttServer());
             otherConfig.setMqttTopic(config.getMqttTopic());
@@ -696,37 +748,78 @@ public class SettingsController {
      * @param initCaptureMethod re-init capture method
      */
     public void initOutputDeviceChooser(boolean initCaptureMethod) {
-        if (!mqttTabController.mqttStream.isSelected()) {
+        if (!networkTabController.mqttStream.isSelected()) {
             String deviceInUse = modeTabController.serialPort.getValue();
             modeTabController.comWirelessLabel.setText(CommonUtility.getWord(Constants.OUTPUT_DEVICE));
             modeTabController.serialPort.getItems().clear();
             modeTabController.serialPort.getItems().add(Constants.SERIAL_PORT_AUTO);
-            if (initCaptureMethod) {
-                modeTabController.captureMethod.getItems().clear();
-                if (NativeExecutor.isWindows()) {
-                    modeTabController.captureMethod.getItems().addAll(Configuration.CaptureMethod.DDUPL, Configuration.CaptureMethod.WinAPI, Configuration.CaptureMethod.CPU);
-                } else if (NativeExecutor.isMac()) {
-                    modeTabController.captureMethod.getItems().addAll(Configuration.CaptureMethod.AVFVIDEOSRC);
-                }
-            }
-            if (NativeExecutor.isWindows()) {
-                SerialManager serialManager = new SerialManager();
-                Map<String, Boolean> availableDevices = serialManager.getAvailableDevices();
-                availableDevices.forEach((portName, isAvailable) -> modeTabController.serialPort.getItems().add(portName));
-            } else {
-                for (int i = 0; i <= 256; i++) {
-                    modeTabController.serialPort.getItems().add(Constants.SERIAL_PORT_TTY + i);
-                }
-            }
+            SerialManager serialManager = new SerialManager();
+            Map<String, Boolean> availableDevices = serialManager.getAvailableDevices();
+            availableDevices.forEach((portName, _) -> modeTabController.serialPort.getItems().add(portName));
             modeTabController.serialPort.setValue(deviceInUse);
         } else {
             modeTabController.comWirelessLabel.setText(CommonUtility.getWord(Constants.OUTPUT_DEVICE));
             if (!modeTabController.serialPort.isFocused()) {
                 String deviceInUse = modeTabController.serialPort.getValue();
                 modeTabController.serialPort.getItems().clear();
-                DevicesTabController.deviceTableData.forEach(glowWormDevice -> modeTabController.serialPort.getItems().add(glowWormDevice.getDeviceName()));
+                GuiSingleton.getInstance().deviceTableData.forEach(glowWormDevice -> modeTabController.serialPort.getItems().add(glowWormDevice.getDeviceName()));
                 modeTabController.serialPort.setValue(deviceInUse);
             }
+        }
+        if (initCaptureMethod) {
+            modeTabController.captureMethod.getItems().clear();
+            if (NativeExecutor.isWindows()) {
+                modeTabController.captureMethod.getItems().addAll(Configuration.CaptureMethod.DDUPL_DX12, Configuration.CaptureMethod.DDUPL_DX11, Configuration.CaptureMethod.WinAPI, Configuration.CaptureMethod.CPU);
+            } else if (NativeExecutor.isMac()) {
+                modeTabController.captureMethod.getItems().addAll(Configuration.CaptureMethod.AVFVIDEOSRC);
+            } else {
+                modeTabController.captureMethod.getItems().addAll(Configuration.CaptureMethod.XIMAGESRC, Configuration.CaptureMethod.XIMAGESRC_NVIDIA,
+                        Configuration.CaptureMethod.PIPEWIREXDG, Configuration.CaptureMethod.PIPEWIREXDG_NVIDIA);
+            }
+        }
+        if (MainSingleton.getInstance().config != null) {
+            if ((MainSingleton.getInstance().config.isWirelessStream() && !networkTabController.mqttStream.isSelected())
+                    || (!MainSingleton.getInstance().config.isWirelessStream() && networkTabController.mqttStream.isSelected())) {
+                modeTabController.serialPort.setValue(Constants.SERIAL_PORT_AUTO);
+            }
+        }
+        modeTabController.setCaptureMethodConverter();
+    }
+
+    /**
+     * Method used to enable disable sat button
+     *
+     * @param isFullFirmware true if full firmware
+     */
+    public void evaluateSatBtn(boolean isFullFirmware) {
+        devicesTabController.evaluateSatelliteBtn(isFullFirmware);
+    }
+
+    /**
+     * Set values on the network tab controller based on the firmware type in use
+     *
+     * @param firmTypeFull or light
+     */
+    public void setNetworkValue(boolean firmTypeFull) {
+        if (!firmTypeFull) {
+            networkTabController.mqttHost.setDisable(true);
+            networkTabController.mqttPort.setDisable(true);
+            networkTabController.mqttTopic.setDisable(true);
+            networkTabController.mqttDiscoveryTopic.setDisable(true);
+            networkTabController.addButton.setDisable(true);
+            networkTabController.removeButton.setDisable(true);
+            networkTabController.mqttUser.setDisable(true);
+            networkTabController.mqttPwd.setDisable(true);
+            networkTabController.mqttStream.setSelected(false);
+            networkTabController.mqttEnable.setSelected(false);
+            networkTabController.mqttStream.setDisable(true);
+            networkTabController.mqttEnable.setDisable(true);
+            networkTabController.streamType.setDisable(true);
+        } else {
+            networkTabController.mqttStream.setSelected(true);
+            networkTabController.mqttEnable.setDisable(false);
+            networkTabController.mqttStream.setDisable(false);
+            networkTabController.streamType.setDisable(false);
         }
     }
 
@@ -755,25 +848,10 @@ public class SettingsController {
     }
 
     /**
-     * Force TextField to be numeric
-     *
-     * @param textField numeric fields
-     */
-    void addTextFieldListener(TextField textField) {
-        textField.textProperty().addListener((observable, oldValue, newValue) -> {
-            if (newValue.length() == 0) {
-                textField.setText("0");
-            } else {
-                textField.setText(CommonUtility.removeChars(newValue));
-            }
-        });
-    }
-
-    /**
      * Set form tooltips
      */
     void setTooltips() {
-        mqttTabController.setTooltips(currentConfig);
+        networkTabController.setTooltips(currentConfig);
         devicesTabController.setTooltips(currentConfig);
         modeTabController.setTooltips(currentConfig);
         miscTabController.setTooltips(currentConfig);
@@ -810,7 +888,7 @@ public class SettingsController {
      * Lock TextField in a numeric state
      */
     void setNumericTextField() {
-        mqttTabController.setNumericTextField();
+        networkTabController.setNumericTextField();
         modeTabController.setNumericTextField();
         ledsConfigTabController.setNumericTextField();
     }
@@ -887,14 +965,14 @@ public class SettingsController {
      * @param currentSettingsInUse object used for the comparison with the profile object
      */
     private void setMqttTabParams(Configuration currentSettingsInUse) {
-        currentSettingsInUse.setMqttServer(mqttTabController.mqttHost.getText() + ":" + mqttTabController.mqttPort.getText());
-        currentSettingsInUse.setMqttTopic(mqttTabController.mqttTopic.getText());
-        currentSettingsInUse.setMqttUsername(mqttTabController.mqttUser.getText());
-        currentSettingsInUse.setMqttPwd(mqttTabController.mqttPwd.getText());
-        currentSettingsInUse.setFullFirmware(mqttTabController.wifiEnable.isSelected());
-        currentSettingsInUse.setMqttEnable(mqttTabController.mqttEnable.isSelected());
-        currentSettingsInUse.setWirelessStream(mqttTabController.mqttStream.isSelected());
-        currentSettingsInUse.setStreamType(mqttTabController.streamType.getValue());
+        currentSettingsInUse.setMqttServer(networkTabController.mqttHost.getText() + ":" + networkTabController.mqttPort.getText());
+        currentSettingsInUse.setMqttTopic(networkTabController.mqttTopic.getText());
+        currentSettingsInUse.setMqttUsername(networkTabController.mqttUser.getText());
+        currentSettingsInUse.setMqttPwd(networkTabController.mqttPwd.getText());
+        currentSettingsInUse.setFullFirmware(modeTabController.firmTypeFull.isSelected());
+        currentSettingsInUse.setMqttEnable(networkTabController.mqttEnable.isSelected());
+        currentSettingsInUse.setWirelessStream(networkTabController.mqttStream.isSelected());
+        currentSettingsInUse.setStreamType(networkTabController.streamType.getValue());
     }
 
     /**
@@ -910,6 +988,7 @@ public class SettingsController {
         currentSettingsInUse.setNumberOfCPUThreads(Integer.parseInt(modeTabController.numberOfThreads.getText()));
         currentSettingsInUse.setCaptureMethod(modeTabController.captureMethod.getValue().name());
         currentSettingsInUse.setOutputDevice(modeTabController.serialPort.getValue());
+        currentSettingsInUse.setSimdAvx(LocalizedEnum.fromStr(Enums.SimdAvxOption.class, modeTabController.simdOption.getValue()).getSimdOptionNumeric());
     }
 
     /**
@@ -918,29 +997,29 @@ public class SettingsController {
     private void setSaveButtonColor(String buttonText, int tooltipDelay) {
         ledsConfigTabController.saveLedButton.setText(CommonUtility.getWord(buttonText));
         modeTabController.saveSettingsButton.setText(CommonUtility.getWord(buttonText));
-        mqttTabController.saveMQTTButton.setText(CommonUtility.getWord(buttonText));
+        networkTabController.saveMQTTButton.setText(CommonUtility.getWord(buttonText));
         miscTabController.saveMiscButton.setText(CommonUtility.getWord(buttonText));
         devicesTabController.saveDeviceButton.setText(CommonUtility.getWord(buttonText));
         if (buttonText.equals(Constants.SAVE)) {
             ledsConfigTabController.saveLedButton.getStyleClass().removeIf(Constants.CSS_STYLE_RED_BUTTON::equals);
             modeTabController.saveSettingsButton.getStyleClass().removeIf(Constants.CSS_STYLE_RED_BUTTON::equals);
-            mqttTabController.saveMQTTButton.getStyleClass().removeIf(Constants.CSS_STYLE_RED_BUTTON::equals);
+            networkTabController.saveMQTTButton.getStyleClass().removeIf(Constants.CSS_STYLE_RED_BUTTON::equals);
             miscTabController.saveMiscButton.getStyleClass().removeIf(Constants.CSS_STYLE_RED_BUTTON::equals);
             devicesTabController.saveDeviceButton.getStyleClass().removeIf(Constants.CSS_STYLE_RED_BUTTON::equals);
             ledsConfigTabController.saveLedButton.setTooltip(null);
             modeTabController.saveSettingsButton.setTooltip(null);
-            mqttTabController.saveMQTTButton.setTooltip(null);
+            networkTabController.saveMQTTButton.setTooltip(null);
             miscTabController.saveMiscButton.setTooltip(null);
             devicesTabController.saveDeviceButton.setTooltip(null);
         } else {
             ledsConfigTabController.saveLedButton.getStyleClass().add(Constants.CSS_STYLE_RED_BUTTON);
             modeTabController.saveSettingsButton.getStyleClass().add(Constants.CSS_STYLE_RED_BUTTON);
-            mqttTabController.saveMQTTButton.getStyleClass().add(Constants.CSS_STYLE_RED_BUTTON);
+            networkTabController.saveMQTTButton.getStyleClass().add(Constants.CSS_STYLE_RED_BUTTON);
             miscTabController.saveMiscButton.getStyleClass().add(Constants.CSS_STYLE_RED_BUTTON);
             devicesTabController.saveDeviceButton.getStyleClass().add(Constants.CSS_STYLE_RED_BUTTON);
             ledsConfigTabController.saveLedButton.setTooltip(createTooltip(Constants.TOOLTIP_SAVELEDBUTTON, tooltipDelay));
             modeTabController.saveSettingsButton.setTooltip(createTooltip(Constants.TOOLTIP_SAVESETTINGSBUTTON, tooltipDelay));
-            mqttTabController.saveMQTTButton.setTooltip(createTooltip(Constants.TOOLTIP_SAVEMQTTBUTTON, tooltipDelay));
+            networkTabController.saveMQTTButton.setTooltip(createTooltip(Constants.TOOLTIP_SAVEMQTTBUTTON, tooltipDelay));
             miscTabController.saveMiscButton.setTooltip(createTooltip(Constants.TOOLTIP_SAVEMQTTBUTTON, tooltipDelay));
             devicesTabController.saveDeviceButton.setTooltip(createTooltip(Constants.TOOLTIP_SAVEDEVICEBUTTON, tooltipDelay));
         }
@@ -975,6 +1054,36 @@ public class SettingsController {
      */
     public void injectEyeCareController(EyeCareDialogController eyeCareDialogController) {
         this.eyeCareDialogController = eyeCareDialogController;
+    }
+
+    /**
+     * Inject satellites dialogue controller into the main controller
+     *
+     * @param satellitesDialogController dialog controller
+     */
+    public void injectSatellitesController(SatellitesDialogController satellitesDialogController) {
+        this.satellitesDialogController = satellitesDialogController;
+    }
+
+    /**
+     * Minimize window
+     */
+    @FXML
+    public void minimizeWindow() {
+        Stage obj = (Stage) closeWindowBtn.getScene().getWindow();
+        obj.setIconified(true);
+    }
+
+    /**
+     * Close window
+     */
+    @FXML
+    public void closeWindow(InputEvent e) {
+        if (!NativeExecutor.isSystemTraySupported()) {
+            NativeExecutor.exit();
+        } else {
+            CommonUtility.closeCurrentStage(e);
+        }
     }
 
 }
